--- a/DirectX_PKT/EnginePlatform/EnginePlatform.vcxproj.filters
+++ b/DirectX_PKT/EnginePlatform/EnginePlatform.vcxproj.filters
@@ -1,93 +1,104 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Resource">
-      <UniqueIdentifier>{34ac48d3-2314-4259-a660-4c6f7671dd14}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Input">
-      <UniqueIdentifier>{203c0c46-1f3b-4e32-aebd-866308b09089}</UniqueIdentifier>
+      <UniqueIdentifier>{a1807b99-4d07-4219-854e-5555aad0ce70}</UniqueIdentifier>
     </Filter>
     <Filter Include="Window">
-      <UniqueIdentifier>{19a7a2cf-56c0-46b9-8077-9904cdecdcff}</UniqueIdentifier>
+      <UniqueIdentifier>{0c30e8fe-edfa-4cd9-baa8-9be3627dda8b}</UniqueIdentifier>
     </Filter>
     <Filter Include="ThirdParty">
-      <UniqueIdentifier>{a09c445c-fc29-4939-854f-0755a0bfd0f1}</UniqueIdentifier>
+      <UniqueIdentifier>{e49edb23-1697-4c63-8b43-989e71ebb712}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ThirdParty\Debug">
-      <UniqueIdentifier>{319d673b-2719-4f88-8355-28f551545a70}</UniqueIdentifier>
+    <Filter Include="ThirdParty\FMOD">
+      <UniqueIdentifier>{449bbfa1-a52b-4570-a1ee-9d6c4edd3820}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ThirdParty\Release">
-      <UniqueIdentifier>{9e17affa-efab-4184-8d7a-9b182d35e937}</UniqueIdentifier>
+    <Filter Include="ThirdParty\FMOD\inc">
+      <UniqueIdentifier>{0b1b6ee0-3336-4cf9-b758-0cbae26f2c53}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\FMOD\Debug">
+      <UniqueIdentifier>{c6c46221-8c68-4057-81c2-94f71b3e0a77}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\FMOD\Release">
+      <UniqueIdentifier>{68948ea2-03a4-46da-9085-b099934425e1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resources">
+      <UniqueIdentifier>{81ba5a73-bc79-434f-aba0-d6048a52dc67}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resources\Sound">
+      <UniqueIdentifier>{46b30133-acb9-499f-ad05-64d87c5bb6df}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod.h">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod.hpp">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod_codec.h">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod_common.h">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod_dsp.h">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod_dsp_effects.h">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod_errors.h">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="ThirdParty\FMOD\inc\fmod_output.h">
-      <Filter>ThirdParty</Filter>
-    </ClInclude>
-    <ClInclude Include="EngineInput.h">
-      <Filter>Input</Filter>
-    </ClInclude>
-    <ClInclude Include="EngineResources.h">
-      <Filter>Resource</Filter>
-    </ClInclude>
-    <ClInclude Include="EngineWindow.h">
-      <Filter>Window</Filter>
-    </ClInclude>
-    <ClInclude Include="WindowImage.h">
-      <Filter>Window</Filter>
-    </ClInclude>
-    <ClInclude Include="EngineSound.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="EngineInput.cpp">
-      <Filter>Input</Filter>
-    </ClCompile>
-    <ClCompile Include="EngineResources.cpp">
-      <Filter>Resource</Filter>
-    </ClCompile>
     <ClCompile Include="EngineWindow.cpp">
       <Filter>Window</Filter>
+    </ClCompile>
+    <ClCompile Include="EngineInput.cpp">
+      <Filter>Input</Filter>
     </ClCompile>
     <ClCompile Include="WindowImage.cpp">
       <Filter>Window</Filter>
     </ClCompile>
-    <ClCompile Include="EngineSound.cpp" />
+    <ClCompile Include="EngineSound.cpp">
+      <Filter>Resources\Sound</Filter>
+    </ClCompile>
+    <ClCompile Include="EngineResources.cpp">
+      <Filter>Resources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ThirdParty\FMOD\Debug\fmodL.dll">
-      <Filter>ThirdParty\Debug</Filter>
-    </None>
-    <None Include="ThirdParty\FMOD\Release\fmod.dll">
-      <Filter>ThirdParty\Release</Filter>
-    </None>
+    <ClInclude Include="EngineWindow.h">
+      <Filter>Window</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineInput.h">
+      <Filter>Input</Filter>
+    </ClInclude>
+    <ClInclude Include="WindowImage.h">
+      <Filter>Window</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod.hpp">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod_codec.h">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod_common.h">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod_dsp.h">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod_dsp_effects.h">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod_errors.h">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod_output.h">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\FMOD\inc\fmod.h">
+      <Filter>ThirdParty\FMOD\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineSound.h">
+      <Filter>Resources\Sound</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineResources.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="ThirdParty\FMOD\Debug\fmodL_vc.lib">
-      <Filter>ThirdParty\Debug</Filter>
-    </Library>
-    <Library Include="ThirdParty\FMOD\Release\fmod_vc.lib">
-      <Filter>ThirdParty\Release</Filter>
-    </Library>
+    <CopyFileToFolders Include="ThirdParty\FMOD\Debug\fmodL.dll">
+      <Filter>ThirdParty\FMOD\Debug</Filter>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="ThirdParty\FMOD\Debug\fmodL_vc.lib">
+      <Filter>ThirdParty\FMOD\Debug</Filter>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="ThirdParty\FMOD\Release\fmod.dll">
+      <Filter>ThirdParty\FMOD\Release</Filter>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="ThirdParty\FMOD\Release\fmod_vc.lib">
+      <Filter>ThirdParty\FMOD\Release</Filter>
+    </CopyFileToFolders>
   </ItemGroup>
 </Project>
