--- a/DirectX_PKT/EngineBase/EngineBase.vcxproj.filters
+++ b/DirectX_PKT/EngineBase/EngineBase.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="EngineString.cpp">
       <Filter>String</Filter>
     </ClCompile>
+    <ClCompile Include="PreCompile.cpp">
+      <Filter>PreCompile</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h">
@@ -75,6 +78,9 @@
     <ClInclude Include="EngineString.h">
       <Filter>String</Filter>
     </ClInclude>
+    <ClInclude Include="PreCompile.h">
+      <Filter>PreCompile</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Debug">
@@ -91,6 +97,9 @@
     </Filter>
     <Filter Include="String">
       <UniqueIdentifier>{4c0d1e00-8d9c-4636-b0ca-6805d56a4811}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="PreCompile">
+      <UniqueIdentifier>{33875ffe-4a0a-46b0-8bc5-b70fb0b4e18a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
