--- a/DirectX_PKT/EngineCore/EngineCore.vcxproj
+++ b/DirectX_PKT/EngineCore/EngineCore.vcxproj
@@ -167,6 +167,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineGraphicDevice.h" />
     <ClInclude Include="EngineOption.h">
       <SubType>
       </SubType>
@@ -178,6 +179,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EngineGraphicDevice.cpp" />
     <ClCompile Include="EngineOption.cpp">
       <SubType>
       </SubType>
