--- a/DirectX_PKT/EngineBase/EngineBase.vcxproj.filters
+++ b/DirectX_PKT/EngineBase/EngineBase.vcxproj.filters
@@ -16,9 +16,6 @@
     <ClCompile Include="EngineRandom.cpp">
       <Filter>Math</Filter>
     </ClCompile>
-    <ClCompile Include="EngineTime.cpp">
-      <Filter>Math</Filter>
-    </ClCompile>
     <ClCompile Include="EngineDirectory.cpp">
       <Filter>File</Filter>
     </ClCompile>
@@ -43,6 +40,9 @@
     <ClCompile Include="TransformObject.cpp">
       <Filter>Object</Filter>
     </ClCompile>
+    <ClCompile Include="EngineTime.cpp">
+      <Filter>Time</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h">
@@ -58,9 +58,6 @@
       <Filter>File</Filter>
     </ClInclude>
     <ClInclude Include="EngineRandom.h">
-      <Filter>Math</Filter>
-    </ClInclude>
-    <ClInclude Include="EngineTime.h">
       <Filter>Math</Filter>
     </ClInclude>
     <ClInclude Include="EngineDirectory.h">
@@ -87,6 +84,9 @@
     <ClInclude Include="TransformObject.h">
       <Filter>Object</Filter>
     </ClInclude>
+    <ClInclude Include="EngineTime.h">
+      <Filter>Time</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Debug">
@@ -106,6 +106,9 @@
     </Filter>
     <Filter Include="PreCompile">
       <UniqueIdentifier>{33875ffe-4a0a-46b0-8bc5-b70fb0b4e18a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Time">
+      <UniqueIdentifier>{2af65220-6c0b-4967-9c1d-8cb92d492398}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
