--- a/DirectX_PKT/EngineShader/EngineShader.vcxproj
+++ b/DirectX_PKT/EngineShader/EngineShader.vcxproj
@@ -127,16 +127,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <FxCompile Include="ColorShader.fx" />
     <FxCompile Include="ImageShader.fx">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
     </FxCompile>
-    <FxCompile Include="ImageShaderTest.fx" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="EngineShaderBase.hlsli" />
     <None Include="EngineVertex.hlsli" />
+    <None Include="TransformData.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
