--- a/DirectX_PKT/EngineShader/EngineShader.vcxproj.filters
+++ b/DirectX_PKT/EngineShader/EngineShader.vcxproj.filters
@@ -4,18 +4,27 @@
     <Filter Include="2D">
       <UniqueIdentifier>{8c820a9b-47fe-441d-89eb-b3544028ea60}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header">
+      <UniqueIdentifier>{9d6bcdbc-c680-4e31-a9da-0cc347ba3f32}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="ImageShader.fx">
       <Filter>2D</Filter>
     </FxCompile>
-    <FxCompile Include="ImageShaderTest.fx">
+    <FxCompile Include="ColorShader.fx">
       <Filter>2D</Filter>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="EngineVertex.hlsli">
-      <Filter>2D</Filter>
+      <Filter>Header</Filter>
+    </None>
+    <None Include="TransformData.hlsli">
+      <Filter>Header</Filter>
+    </None>
+    <None Include="EngineShaderBase.hlsli">
+      <Filter>Header</Filter>
     </None>
   </ItemGroup>
 </Project>
