업데이트 엔진 업데이트

--- a/DirectX_PKT/EngineCore/EngineCore.vcxproj.filters
+++ b/DirectX_PKT/EngineCore/EngineCore.vcxproj.filters
@@ -49,6 +49,21 @@
     <Filter Include="ShaderResource">
       <UniqueIdentifier>{12603777-562f-47e1-a237-760532535fe4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ThirdParty">
+      <UniqueIdentifier>{e4fd6985-ea50-4cca-b4ea-778c44cef463}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\DirectXTex">
+      <UniqueIdentifier>{bfee0424-9c50-42f7-b060-edebc1f05dca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\DirectXTex\Debug">
+      <UniqueIdentifier>{4ee16aa7-d1e2-47e1-86ec-46d740bf0520}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\DirectXTex\Inc">
+      <UniqueIdentifier>{d0e67a47-db5c-4892-8c5c-d0d95162bcad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\DirectXTex\Release">
+      <UniqueIdentifier>{fa693a66-c5cf-457f-a232-e5d825708a99}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EngineCore.cpp">
@@ -137,6 +152,9 @@
     </ClCompile>
     <ClCompile Include="EngineConstantBuffer.cpp">
       <Filter>ShaderResource</Filter>
+    </ClCompile>
+    <ClCompile Include="EngineSampler.cpp">
+      <Filter>Resources\Texture</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -227,5 +245,24 @@
     <ClInclude Include="EngineConstantBuffer.h">
       <Filter>ShaderResource</Filter>
     </ClInclude>
+    <ClInclude Include="EngineSampler.h">
+      <Filter>Resources\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\DirectxTex\inc\DirectXTex.h">
+      <Filter>ThirdParty\DirectXTex\Inc</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ThirdParty\DirectxTex\inc\DirectXTex.inl">
+      <Filter>ThirdParty\DirectXTex\Inc</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="ThirdParty\DirectxTex\Debug\DirectXTex.lib">
+      <Filter>ThirdParty\DirectXTex\Debug</Filter>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="ThirdParty\DirectxTex\Release\DirectXTex.lib">
+      <Filter>ThirdParty\DirectXTex\Release</Filter>
+    </CopyFileToFolders>
   </ItemGroup>
 </Project>
