--- a/DirectX_PKT/EngineShader/EngineShader.vcxproj
+++ b/DirectX_PKT/EngineShader/EngineShader.vcxproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="EngineShaderBase.hlsli" />
+    <None Include="EngineTexture.hlsli" />
     <None Include="EngineVertex.hlsli" />
     <None Include="TransformData.hlsli" />
   </ItemGroup>
