--- a/DirectX_PKT/EnginePlatform/EnginePlatform.vcxproj
+++ b/DirectX_PKT/EnginePlatform/EnginePlatform.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{B6D0BCA5-653B-4B5E-8ABB-B8B324D3724C}</ProjectGuid>
+    <ProjectGuid>{f0716ec2-0bc5-43ea-9046-b203e0985a67}</ProjectGuid>
     <RootNamespace>EnginePlatform</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -187,7 +187,10 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="PreCompile.h" />
+    <ClInclude Include="PreCompile.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="ThirdParty\FMOD\inc\fmod.h" />
     <ClInclude Include="ThirdParty\FMOD\inc\fmod.hpp" />
     <ClInclude Include="ThirdParty\FMOD\inc\fmod_codec.h" />
@@ -216,6 +219,8 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="PreCompile.cpp">
+      <SubType>
+      </SubType>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
