--- a/DirectX_PKT/EngineCore/EngineCore.vcxproj
+++ b/DirectX_PKT/EngineCore/EngineCore.vcxproj
@@ -175,6 +175,9 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineDebugMsgWindow.h" />
+    <ClInclude Include="EngineEditorGUI.h" />
+    <ClInclude Include="EngineEditorWindow.h" />
     <ClInclude Include="EngineEnums.h" />
     <ClInclude Include="EngineGraphicDevice.h" />
     <ClInclude Include="EngineIndexBuffer.h" />
@@ -197,6 +200,14 @@
     <ClInclude Include="EngineVertexBuffer.h" />
     <ClInclude Include="EngineVertexShader.h" />
     <ClInclude Include="GameMode.h" />
+    <ClInclude Include="imconfig.h" />
+    <ClInclude Include="imgui.h" />
+    <ClInclude Include="imgui_impl_dx11.h" />
+    <ClInclude Include="imgui_impl_win32.h" />
+    <ClInclude Include="imgui_internal.h" />
+    <ClInclude Include="imstb_rectpack.h" />
+    <ClInclude Include="imstb_textedit.h" />
+    <ClInclude Include="imstb_truetype.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="PreCompile.h" />
     <ClInclude Include="Renderer.h" />
@@ -220,6 +231,9 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EngineDebugMsgWindow.cpp" />
+    <ClCompile Include="EngineEditorGUI.cpp" />
+    <ClCompile Include="EngineEditorWindow.cpp" />
     <ClCompile Include="EngineGraphicDevice.cpp" />
     <ClCompile Include="EngineGraphicDevice_Resources.cpp" />
     <ClCompile Include="EngineIndexBuffer.cpp" />
@@ -242,6 +256,13 @@
     <ClCompile Include="EngineVertexBuffer.cpp" />
     <ClCompile Include="EngineVertexShader.cpp" />
     <ClCompile Include="GameMode.cpp" />
+    <ClCompile Include="imgui.cpp" />
+    <ClCompile Include="imgui_demo.cpp" />
+    <ClCompile Include="imgui_draw.cpp" />
+    <ClCompile Include="imgui_impl_dx11.cpp" />
+    <ClCompile Include="imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui_tables.cpp" />
+    <ClCompile Include="imgui_widgets.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="PreCompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
