--- a/DirectX_PKT/NewAPP/imgui.ini
+++ b/DirectX_PKT/NewAPP/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][DEBUGMSGWINDOW]
-Pos=60,60
+ViewportPos=1498,304
+ViewportId=0x3FDDA33F
 Size=331,196
 Collapsed=0
 
