[업데이트] 선풍기 화면에 띄우는 작업중

--- a/DirectX_PKT/MyCore/MyCore.vcxproj
+++ b/DirectX_PKT/MyCore/MyCore.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Fan.h" />
     <ClInclude Include="MainTitleLevel.h" />
     <ClInclude Include="MyCore.h">
       <SubType>
@@ -29,11 +30,13 @@
     <ClInclude Include="PlayGameMode.h" />
     <ClInclude Include="PreCompile.h" />
     <ClInclude Include="Stage.h" />
+    <ClInclude Include="StageBackGroundClass.h" />
     <ClInclude Include="TitleBackGround.h" />
     <ClInclude Include="TitleGameMode.h" />
     <ClInclude Include="TitleLogo.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Fan.cpp" />
     <ClCompile Include="MainTitleLevel.cpp" />
     <ClCompile Include="MyCore.cpp">
       <SubType>
@@ -49,6 +52,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="StageBackGroundClass.cpp" />
     <ClCompile Include="TitleBackGround.cpp" />
     <ClCompile Include="TitleGameMode.cpp" />
     <ClCompile Include="TitleLogo.cpp" />
