--- a/DirectX_PKT/MyCore/MyCore.vcxproj.filters
+++ b/DirectX_PKT/MyCore/MyCore.vcxproj.filters
@@ -55,6 +55,12 @@
     <ClCompile Include="Stage.cpp">
       <Filter>Level\Stage</Filter>
     </ClCompile>
+    <ClCompile Include="StageBackGroundClass.cpp">
+      <Filter>Level\Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="Fan.cpp">
+      <Filter>Level\Stage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PreCompile.h">
@@ -85,6 +91,12 @@
       <Filter>Level\Title</Filter>
     </ClInclude>
     <ClInclude Include="Stage.h">
+      <Filter>Level\Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="StageBackGroundClass.h">
+      <Filter>Level\Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="Fan.h">
       <Filter>Level\Stage</Filter>
     </ClInclude>
   </ItemGroup>
