업데이트 / 엔진 ROOT컴포넌트+ 부모자식관계 FTransform

--- a/DirectX_PKT/NewAPP/imgui.ini
+++ b/DirectX_PKT/NewAPP/imgui.ini
@@ -4,9 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][DEBUGMSGWINDOW]
-ViewportPos=1498,304
-ViewportId=0x3FDDA33F
-Size=331,196
+Pos=54,1
+Size=331,238
 Collapsed=0
 
 [Docking][Data]
