[업데이트] 선풍기 적용 완료

--- a/DirectX_PKT/NewAPP/imgui.ini
+++ b/DirectX_PKT/NewAPP/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][DEBUGMSGWINDOW]
-Pos=54,1
+ViewportPos=1617,367
+ViewportId=0x3FDDA33F
 Size=331,238
-Collapsed=0
+Collapsed=1
 
 [Docking][Data]
 
