--- a/DirectX_PKT/MyCore/MyCore.vcxproj
+++ b/DirectX_PKT/MyCore/MyCore.vcxproj
@@ -19,6 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Arrow.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Fan.h" />
     <ClInclude Include="MainTitleLevel.h" />
     <ClInclude Include="MyCore.h">
@@ -36,6 +40,10 @@
     <ClInclude Include="TitleLogo.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Arrow.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Fan.cpp" />
     <ClCompile Include="MainTitleLevel.cpp" />
     <ClCompile Include="MyCore.cpp">
