--- a/DirectX_PKT/NewAPP/imgui.ini
+++ b/DirectX_PKT/NewAPP/imgui.ini
@@ -9,5 +9,11 @@ ViewportId=0x3FDDA33F
 Size=331,238
 Collapsed=0
 
+[Window][DebugMsgWindow]
+ViewportPos=1524,169
+ViewportId=0x9CCC264F
+Size=409,321
+Collapsed=0
+
 [Docking][Data]
 
