GUI 카메라 위치 표시 완료 및 카메라 왼쪽 이동값 확인

--- a/DirectX_PKT/NewAPP/imgui.ini
+++ b/DirectX_PKT/NewAPP/imgui.ini
@@ -10,8 +10,7 @@ Size=331,238
 Collapsed=0
 
 [Window][DebugMsgWindow]
-ViewportPos=1524,169
-ViewportId=0x9CCC264F
+Pos=10,374
 Size=409,321
 Collapsed=0
 
