감시 카메라 좌우 움직임 구현 완료

--- a/DirectX_PKT/NewAPP/imgui.ini
+++ b/DirectX_PKT/NewAPP/imgui.ini
@@ -10,7 +10,8 @@ Size=331,238
 Collapsed=0
 
 [Window][DebugMsgWindow]
-Pos=10,374
+ViewportPos=1565,327
+ViewportId=0x9CCC264F
 Size=409,321
 Collapsed=0
 
